# Connect4-Agent

./: README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: action_ordering.rs  agent.rs  board.rs  lib.rs  main.rs  opening_db.rs  transposition.rs
backend/tests/: benchmark.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ConnectFour.vue
