[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
rayon = "1.8"
once_cell = "1.18.0"
serde = { version = "1.0.192", features = ["derive"] }
bincode = "1.3.3"
